--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
 
+  #video Player
+  video_player: ^2.4.10
+
+  #visibility_detector
+  visibility_detector: 0.3.3
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -59,7 +66,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/videos/video01.mp4
+    - assets/videos/video02.mp4
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
