--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,8 +69,11 @@ flutter:
   assets:
     - assets/videos/video01.mp4
     - assets/videos/video02.mp4
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - assets/images/image01.png
+    - assets/images/image02.png
+    - assets/images/image03.png
+    - assets/images/image04.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
