--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   #visibility_detector
   visibility_detector: 0.3.3
 
+  #fonts
+  google_fonts: ^4.0.1
+
 
 dev_dependencies:
   flutter_test:
