#17 NAVIGATOR DEEP DIVE & #18 NAVIGATOR 2

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   #fonts
   google_fonts: ^4.0.1
 
+  #router
+  go_router: ^6.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
